# recognize.me

./: .classpath  .gitignore  .project  pom.xml
ImageRecognition/: CMakeLists.txt  sift.cpp  siftTrain.cpp
lib/: libopencv_calib3d.2.4.dylib  libopencv_contrib.2.4.dylib  libopencv_core.dylib  libopencv_features2d.2.4.dylib  libopencv_flann.2.4.9.dylib  libopencv_gpu.dylib  libopencv_highgui.dylib  libopencv_imgproc.2.4.dylib  libopencv_java249.dylib  libopencv_legacy.2.4.dylib  libopencv_ml.2.4.dylib  libopencv_nonfree.2.4.dylib  libopencv_objdetect.2.4.dylib  libopencv_ocl.2.4.dylib  libopencv_photo.2.4.dylib  libopencv_stitching.2.4.9.dylib  libopencv_superres.dylib  libopencv_video.2.4.dylib  libopencv_videostab.dylib
src/main/java/com/glassify/controller/: AuthenticationController.java  BrandController.java  HomeController.java  ImageMatcher.java  LearningController.java  StatsController.java  UploadController.java
src/main/java/com/glassify/dao/: AuditTrailDao.java  AuditTrailDaoImpl.java  BrandDao.java  BrandDaoImpl.java  CredentialDao.java  CredentialDaoImpl.java
src/main/resources/: client_secrets.json
src/main/webapp/: index.jsp
src/main/webapp/WEB-INF/: dispatcher-servlet.xml  logback.xml  web.xml
src/main/webapp/WEB-INF/views/: about.jsp  add-brand.jsp  audit-trails.jsp  contact.jsp  errorBrand.jsp  file-upload.jsp  footer.jsp  header.jsp  learn.jsp  login.jsp  show-brands.jsp  stats.jsp  successBrand.jsp  upload.jsp
src/main/webapp/resources/css/: index.css
src/main/webapp/resources/js/: brands.js  stats.js  trails.js  upload.js
(+18 files in other folders)
