CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT( ml_opencv )
FIND_PACKAGE( OpenCV REQUIRED )
ADD_EXECUTABLE(data main1.cpp)
ADD_EXECUTABLE(main main.cpp)
ADD_EXECUTABLE(training training.cpp)
ADD_EXECUTABLE(predection predection.cpp)
ADD_EXECUTABLE(threshold threshold.cpp)
ADD_EXECUTABLE(svm svm.cpp)
ADD_EXECUTABLE(template template.cpp)
ADD_EXECUTABLE(digitRecognition digitRecognition.cpp)
ADD_EXECUTABLE(harris harris.cpp)
ADD_EXECUTABLE(sift sift.cpp)
ADD_EXECUTABLE(bow bow.cpp)
ADD_EXECUTABLE(flann_test flann_test.cpp)
ADD_EXECUTABLE(siftTrain siftTrain.cpp)
TARGET_LINK_LIBRARIES(template  ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(data  ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(main ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(training ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(predection ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(threshold ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(svm ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(digitRecognition ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(harris  ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(sift ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(bow  ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(flann_test  ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(siftTrain ${OpenCV_LIBS})
